organisation and new project

--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -2,42 +2,42 @@
 title: "CCAD Summer Show 2017"
 description: "A bold, dynamic identity for the anual summer show at Cleveland College of Art and Design. It's a showcase of creativity by upcoming talent."
 draft: false
-image: "/img/ss17-teaser.gif"
-weight: 3
+image: "/img/ss17/ss17_thumb.gif"
+weight: 4
 ---
 
 <div class="row">
     <div class="col-sm-12">
-        <img src="/img/teaser2.gif" alt="work" class="media-img project-img">
+        <img src="/img/ss17/ss17_banner.gif" alt="work" class="media-img project-img">
     </div>
 </div>
 
 <div class="row">
     <div class="col-sm-12">
-        <img src="/img/ss17-icons.jpg" alt="work" class="media-img project-img">
+        <img src="/img/ss17/ss17_icons.jpg" alt="work" class="media-img project-img">
     </div>
 </div>
 
 <div class="row">
     <div class="col-sm-12">
-        <img src="/img/ss17-poster.jpg" alt="work" class="media-img project-img">
+        <img src="/img/ss17/ss17_poster.jpg" alt="work" class="media-img project-img">
     </div>
 </div>
 
 <div class="row">
     <div class="col-sm-12">
-        <img src="/img/ss17-flyer.jpg" alt="work" class="media-img project-img">
+        <img src="/img/ss17/ss17_flyer.jpg" alt="work" class="media-img project-img">
     </div>
 </div>
 
 <div class="row">
     <div class="col-sm-12">
-        <img src="/img/ss17-tote.jpg" alt="work" class="media-img project-img">
+        <img src="/img/ss17/ss17_tote.jpg" alt="work" class="media-img project-img">
     </div>
 </div>
 
 <div class="row">
     <div class="col-sm-12">
-        <img src="/img/ss17-tee.jpg" alt="work" class="media-img project-img">
+        <img src="/img/ss17/ss17_tee.jpg" alt="work" class="media-img project-img">
     </div>
 </div>
