banner project update

--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -3,14 +3,9 @@ title: "CCAD Summer Show 2017"
 description: "A bold, dynamic identity for the anual summer show at Cleveland College of Art and Design. It's a showcase of creativity by upcoming talent."
 draft: false
 image: "/img/ss17/ss17_thumb.gif"
+banner: "/img/ss17/ss17_banner.gif"
 weight: 4
 ---
-
-<div class="row">
-    <div class="col-sm-12">
-        <img src="/img/ss17/ss17_banner.gif" alt="work" class="media-img project-img">
-    </div>
-</div>
 
 <div class="row">
     <div class="col-sm-12">
