Banner and Logo Scaling + Improvements

--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -3,7 +3,8 @@ title: "CCAD Summer Show 2017"
 description: "A bold, dynamic identity for the anual summer show at Cleveland College of Art and Design. It's a showcase of creativity by upcoming talent."
 draft: false
 image: "/img/ss17/ss17_thumb.gif"
-banner: "/img/ss17/ss17_banner.gif"
+banner: "/"
+banner-logo: "/img/ss17/ss17_banner_logo.png"
 weight: 4
 ---
 
