--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -14,6 +14,14 @@ weight: 4
     </div>
 </div>
 
+<h3>SS17 dynamic visual system. Each icon can be overlaid in various configurations to create unique patterns.</h3>
+
+<div class="row">
+    <div class="col-sm-12">
+        <img src="/img/ss17/ss17_banner.gif" alt="work" class="media-img project-img">
+    </div>
+</div>
+
 <div class="row">
     <div class="col-sm-12">
         <img src="/img/ss17/ss17_poster.jpg" alt="work" class="media-img project-img">
