--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -1,6 +1,6 @@
 ---
 title: "CCAD Summer Show 2017"
-description: "A bold, dynamic identity for the anual summer show at Cleveland College of Art and Design. It's a showcase of creativity by upcoming talent."
+description: "A bold, dynamic identity for the anual summer show at CCAD. It's a showcase of creativity by upcoming talent."
 draft: false
 image: "/img/ss17/ss17_thumb.gif"
 banner: "/"
@@ -14,7 +14,7 @@ weight: 4
     </div>
 </div>
 
-<h3>SS17 dynamic visual system. Each icon can be overlaid in various configurations to create unique patterns.</h3>
+<h4>SS17 dynamic visual system. Each icon can be overlaid in various configurations to create unique patterns.</h4>
 
 <div class="row">
     <div class="col-sm-12">
