Misc page + Image optim

--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -2,7 +2,7 @@
 title: "CCAD Summer Show 2017"
 description: "A bold, dynamic identity for the anual summer show at CCAD. It's a showcase of creativity by upcoming talent."
 draft: false
-image: "/img/ss17/ss17_thumb2.gif"
+image: "/img/ss17/ss17_thumb.gif"
 banner: "/"
 banner-logo: "/img/ss17/ss17_banner_logo.png"
 weight: 5
