--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -5,7 +5,7 @@ draft: false
 image: "/img/ss17/ss17_thumb.gif"
 banner: "/"
 banner-logo: "/img/ss17/ss17_banner_logo.png"
-weight: 5
+weight: 4
 ---
 
 <div class="row">
@@ -41,13 +41,13 @@ weight: 5
 
 <div class="row">
     <div class="col-sm-12">
-        <img src="/img/ss17/ss17_poster.jpg" alt="work" class="media-img project-img">
+        <img src="/img/ss17/ss17_poster2.jpg" alt="work" class="media-img project-img">
     </div>
 </div>
 
 <div class="row">
     <div class="col-sm-12">
-        <img src="/img/ss17/ss17_poster2.jpg" alt="work" class="media-img project-img">
+        <img src="/img/ss17/ss17_flyer2.jpg" alt="work" class="media-img project-img">
     </div>
 </div>
 
