--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -1,5 +1,6 @@
 ---
 title: "CCAD Summer Show 2017"
+type: "Identity"
 description: "A bold, dynamic identity for the anual summer show at CCAD. It's a showcase of creativity by upcoming talent."
 draft: false
 image: "/img/ss17/ss17_thumb.gif"
