--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -4,6 +4,7 @@ type: "Identity"
 description: "A bold, dynamic identity for the anual summer show at CCAD. It's a showcase of creativity by upcoming talent."
 draft: false
 image: "/img/ss17/ss17_thumb.gif"
+hover: "/img/ss17/ss17_hover.jpg"
 banner: "/"
 banner-logo: "/img/ss17/ss17_banner_logo.png"
 weight: 4
