--- a/content/project/ss17.md
+++ b/content/project/ss17.md
@@ -4,66 +4,62 @@ type: "Identity"
 description: "A bold, dynamic identity for the annual summer show at CCAD. It's a showcase of creativity by upcoming talent."
 draft: false
 image: "/img/ss17/ss17_thumb.jpg"
-banner: "/"
-banner-logo: "/img/ss17/ss17_banner_logo.png"
+banner: "/img/ss17/ss17_poster2.jpg"
+display: 'visibility: hidden'
 weight: 4
 ---
-
 <div class="row">
-    <div class="col-sm-12">
-        <img src="/img/ss17/ss17_sk1.jpg" alt="work" class="project-img">
+    <div class="col-sm-8">
+        <img src="/img/ss17/ss17_logoanimation.gif" alt="work" class="project-img">
     </div>
 </div>
 
 <div class="row">
-    <div class="col-sm-6">
-        <img src="/img/ss17/ss17_sk2.jpg" alt="work" class="project-img">
-    </div>
-    <div class="col-sm-6">
-        <img src="/img/ss17/ss17_sk4.jpg" alt="work" class="project-img">
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-8">
         <img src="/img/ss17/ss17_icons.jpg" alt="work" class="project-img">
     </div>
-</div>
-
-<div class="row">
-    <div class="col-sm-12">
-        <img src="/img/ss17/ss17_banner.gif" alt="work" class="project-img">
+    <div class="col-sm-4">
+        <p>The three elements that form the SS17 dynamic visual system. Each icon can be overlaid in various configurations to create unique icons.</p>
     </div>
 </div>
 
-<p>There are three elements that form the SS17 dynamic visual system. Each icon can be overlaid in various configurations to create unique icons.</p>
-
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-8">
         <img src="/img/ss17/ss17_poster2.jpg" alt="work" class="project-img">
     </div>
 </div>
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-8">
         <img src="/img/ss17/ss17_tee.jpg" alt="work" class="project-img">
     </div>
 </div>
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-8">
         <img src="/img/ss17/ss17_flyer2.jpg" alt="work" class="project-img">
     </div>
 </div>
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-8">
         <img src="/img/ss17/ss17_flyer.jpg" alt="work" class="project-img">
     </div>
 </div>
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-8">
         <img src="/img/ss17/ss17_tote.jpg" alt="work" class="project-img">
     </div>
 </div>
+<!-- <div class="row">
+    <div class="col-sm-3">
+        <img src="/img/ss17/ss17_sk1.jpg" alt="work" class="project-img">
+    </div>
+    <div class="col-sm-3">
+        <img src="/img/ss17/ss17_sk2.jpg" alt="work" class="project-img">
+    </div>
+    <div class="col-sm-3">
+        <img src="/img/ss17/ss17_sk4.jpg" alt="work" class="project-img">
+    </div>
+</div> -->
